Change input URL from wp.pl to openai.com in notebook

--- a/ai-brochure-generator.ipynb
+++ b/ai-brochure-generator.ipynb
@@ -145,7 +145,7 @@
     "\n",
     "# Example usage\n",
     "if __name__ == \"__main__\":\n",
-    "    display_brochure(\"Wirtualna Polska\", \"https://www.wp.pl\")\n"
+    "    display_brochure(\"OpenAI\", \"https://openai.com/")\n"
    ]
   }
  ],
